first init success

--- a/simple-chrome-plugin-demo/popup.html
+++ b/simple-chrome-plugin-demo/popup.html
@@ -5,7 +5,9 @@
 	<title>popup</title>
 </head>
 <body style="width:500px;min-height:100px;">
-	这里是popup。
+	<h2>E+消息助手</h2>
+	<a href="#" id="read_helper">阅读助手</a>
+	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
 </body>
 </html>
